--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,6 +23,8 @@ jobs:
             ${{ runner.OS }}-npm-cache
       - name: Install Dependencies
         run: npm install
+      - name: Install Theme
+        run: git clone https://github.com/theme-next/hexo-theme-next themes/next
       - name: Build
         run: npm run build
       - name: Deploy
