--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -9,3 +9,16 @@ local_search:
   unescape: false
   # Preload the search data when the page loads.
   preload: false
+
+busuanzi_count:
+  enable: true
+  total_visitors: true
+  total_visitors_icon: fa fa-user
+  total_views: true
+  total_views_icon: fa fa-eye
+  post_views: true
+  post_views_icon: fa fa-eye
+
+reward:
+  wechatpay: /images/wechatpay.png
+  alipay: /images/alipay.png
