--- a/_config.yml
+++ b/_config.yml
@@ -103,3 +103,19 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+
+# feed
+feed:
+  enable: true
+  type: 
+    - atom
+    - rss2
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
+  icon: icon.png
+  autodiscovery: true
+  template:
