--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,3 +33,12 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
           publish_branch: master  # deploying branch
+      - name: Deploy to MinIO
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --follow-symlinks --delete
+          bucket: ${{ secrets.MINIO_BUCKET }}
+          endpoint: ${{ secrets.MINIO_ENDPOINT }} 
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.MINIO_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.MINIO_SECRET_KEY }}
