--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -38,5 +38,6 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.MINIO_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.MINIO_SECRET_KEY }}
+          aws-region: us-east-1  # You can set this to any region, as it's not used by MinIO
       - name: Deploy to MinIO
         run: aws s3 sync public s3://${{ secrets.MINIO_BUCKET }} --endpoint-url=${{ secrets.MINIO_ENDPOINT }} --acl public-read --follow-symlinks --delete
